--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-Flask
-Jinja2
-Flask-SQLAlchemy
-mod-wsgi
-mysql-connector-python
+blinker==1.7.0
+click==8.1.7
+flask==3.0.3
+flask-sqlalchemy==3.1.1
+greenlet==3.0.3
+gunicorn==22.0.0
+importlib-metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mod-wsgi==5.0.0
+mysql-connector-python==8.3.0
+mysqlclient==2.2.4
+packaging==24.0
+SQLAlchemy==2.0.29
+typing-extensions==4.11.0
+werkzeug==3.0.2
+zipp==3.18.1
