--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 blinker==1.7.0
 click==8.1.7
 dnspython==2.6.1
-email_validator==2.1.1
-Flask==3.0.3
+email_validator
+Flask
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
 idna==3.7
 importlib_metadata==7.1.0
-itsdangerous==2.2.0
+itsdangerous==2.0.1
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 pkg_resources==0.0.0
