--- a/requirements.mysql.txt
+++ b/requirements.mysql.txt
@@ -23,8 +23,10 @@ Jinja2==3.1.3
 jwt==1.3.1
 Mako==1.3.3
 MarkupSafe==2.1.5
+mysqlclient==2.2.4
 pyasn==1.6.2
 pycparser==2.22
+PyJWT==1.7.1
 requests==2.31.0
 SQLAlchemy==2.0.29
 SQLAlchemy-Utils==0.41.2
