--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "ipwhois",
+        "pyasn",
+        "rdatatype",
         "sqlalchemy",
-        "werkzeug"
+        "werkzeug",
+        "whois"
     ]
    
 }
